--- a/index.html
+++ b/index.html
@@ -11,6 +11,44 @@ h2 {
 		C:hover {
     background-color: yellow;
 }
+		.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #3e8e41;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.show {display:block;}
+		
 	</style>
 	
 	<link href="Cheyenne.css" rel="stylesheet" type="text/css">
@@ -32,7 +70,15 @@ h2 {
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Belly Dance</p></div></div1>
 <div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Folk Dance</p></div></center></div1>
 <a href="https://chey-s.github.io/Ballet/index2.html">	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Swing</p></div></div1></a>
-	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Salsa</p></div></div1>
+	
+	<div class="dropdown">
+<button id="myBtn" class="dropbtn">Dropdown</button>
+  <div id="myDropdown" class="dropdown-content">
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+
+<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Salsa</p></div></div1>  </div></div>
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Samba</p></div></div1>
 <div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Cha-Cha-Cha</p></div></div1>
 <div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Tap Dance</p></div></div1>
