--- a/index.html
+++ b/index.html
@@ -1,17 +1,6 @@
 <html>
 <head>
-        <style>
-div1 {
-    text-align: center;
-}
-		
-h2 {
-    font-size: 300%;
-}
-		C:hover {
-    background-color: yellow;
-}
-		.dropbtn {
+        .dropbtn {
     background-color: #4CAF50;
     color: white;
     padding: 16px;
@@ -48,6 +37,26 @@ h2 {
 .dropdown-content a:hover {background-color: #f1f1f1}
 
 .show {display:block;}
+		
+	<style>
+div1 {
+    text-align: center;
+}
+		
+h2 {
+    font-size: 300%;
+}
+		C:hover {
+    background-color: yellow;
+}
+		
+		// Get the button, and when the user clicks on it, execute myFunction
+document.getElementById("myBtn").onclick = function() {myFunction()};
+
+/* myFunction toggles between adding and removing the show class, which is used to hide and show the dropdown content */
+function myFunction() {
+    document.getElementById("myDropdown").classList.toggle("show");
+}
 		
 	</style>
 	
