--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ function myFunction() {
 		<div class="dropdown">
   <button class="dropbtn">Salsa</button>
   <div class="dropdown-content">
-    <a href="#">Link 1</a>
+    <a href="#">Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.</a>
   </div>
 </div>
 		
