--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@ function myFunction() {
   </div>
 </div>
 
-		<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Salsa</p></div>		
+		<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Salsa</p></div></div1>		
 <div class="dropdown">
   <button class="dropbtn">Salsa</button>
-  <div class="dropdown-content"></div></div></div1>
+  <div class="dropdown-content"></div></div>
 	<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Samba</p></div></div1>
 <div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Cha-Cha-Cha</p></div></div1>
 <div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Tap Dance</p></div></div1>
