--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ function myFunction() {
 	<CLS>
  <il>
 	 <center><div><div style="background-color: #00FF00;color:black;padding:20px; width: 25%;"><p>an artistic dance form performed to music using precise and highly formalized set steps and gestures. Classical ballet, which originated in Renaissance Italy and established its present form during the 19th century, is characterized by light, graceful, fluid movements and the use of pointe shoes.</p>
-		<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 5%; align: left;"><p>Ballet</p></div1></div>
+		<div1><div align="center"><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 5%;"><p>Ballet</p></div1></div></div>
 		 </il>
 		</CLS></div></div></center>
 
