--- a/index13.html
+++ b/index13.html
@@ -1,6 +1,8 @@
 <html>
 <head>
-        <link href=".css" rel="stylesheet" type="text/css">
+       <style>
+	       
+	<link href=".css" rel="stylesheet" type="text/css">
         <title>Ballet</title>
 </head>
 <body>
