--- a/index13.html
+++ b/index13.html
@@ -49,7 +49,7 @@ function myFunction() {
 		
 	</style>
 	
-	<link href=".css" rel="stylesheet" type="text/css">
+	<link href="13.css" rel="stylesheet" type="text/css">
         <title>Ballet</title>
 </head>
 <body>
