--- a/index13.html
+++ b/index13.html
@@ -62,6 +62,14 @@ function myFunction() {
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
+	
+	<div class="dropdown">
+  <button class="dropbtn">Ballet</button>
+  <div class="dropdown-content">
+    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+  </div>
+</div>
+	
 	<div class="dropdown">
   <button class="dropbtn">Belly Dance</button>
   <div class="dropdown-content">
