--- a/index13.html
+++ b/index13.html
@@ -78,7 +78,19 @@ function myFunction() {
 	</div>
 </div>
 	
-		<div align="left"><a href="https://chey-s.github.io/Ballet/index.html"><img src="https://image.flaticon.com/icons/png/512/17/17264.png" style="height:50px; width:50px;"></a></div>
+	<div class="dropdown">
+  <button class="dropbtn">Salsa</button>
+  <div class="dropdown-content">
+    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+  </div>
+</div>
+		
+		<div1><div style="background-color: #00FF00;color:black;padding:20px; width: 15%; margin-top: 1%"><p>Salsa</p></div></div1>		
+<div class="dropdown">
+  <button class="dropbtn">Salsa</button>
+  <div class="dropdown-content"></div>
+		
+	<div align="left"><a href="https://chey-s.github.io/Ballet/index.html"><img src="https://image.flaticon.com/icons/png/512/17/17264.png" style="height:50px; width:50px;"></a></div>
 	
 </body>
 </html>
