--- a/index13.html
+++ b/index13.html
@@ -56,20 +56,19 @@ function myFunction() {
        
     <center><h1><font size="50"px>Styles of Dance</font></h1></center>
 	
-	<div><div class="dropdown">
+	<div class="dropdown">
   <button class="dropbtn">Ballet</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
-	<div class="dropdown">
-  <button class="dropbtn">Ballet</button>
+	<div style="width: 15%; margin-top: 1%"><div class="dropdown">
+		<button class="dropbtn">Ballet</button></div>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
  	</div>
 </div>
-	</div>
 
 	<div align="left"><a href="https://chey-s.github.io/Ballet/index.html"><img src="https://image.flaticon.com/icons/png/512/17/17264.png" style="height:50px; width:50px;"></a></div>
 	
