--- a/index13.html
+++ b/index13.html
@@ -63,7 +63,7 @@ function myFunction() {
   </div>
 </div>
 	
-	<div style="width: 15%; margin-top: 1%"><div class="dropdown">
+	<div style="width: 15%; margin-left: 1%"><div class="dropdown">
 		<button class="dropbtn">Ballet</button></div>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
