--- a/index13.html
+++ b/index13.html
@@ -20,6 +20,7 @@
     min-width: 200%;
     box-shadow: 0% 8% 16% 0% rgba(0,0,0,0.2);
     z-index: 1;
+	grid-template-columns: 100px 100px 100px;
 }
 .dropdown-content a {
     color: black;
