--- a/index13.html
+++ b/index13.html
@@ -14,7 +14,7 @@
     display: inline-block;
 }
 .dropdown-content {
-    display: none;
+    display: grid;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 200%;
