--- a/index2.html
+++ b/index2.html
@@ -23,14 +23,14 @@
 	<ul>
  <li><a href="https://chey-s.github.io/-Ballet/index14.html">1900</a></li>
  <ll><a href="https://chey-s.github.io/-Ballet/index15.html">1910</a></ll>
-<li><a href="https://chey-s.github.io/Ballet/index5.html">1920</a></li>
-  <ll><a href="https://chey-s.github.io/Ballet/index3.html">1930</a></ll>
- <li><a href="https://chey-s.github.io/Ballet/index4.html">1940</a></li>
-<ll><a href="https://chey-s.github.io/Ballet/index5.html">1950</a></ll>
-  <li><a href="https://chey-s.github.io/Ballet/index3.html">1960</a></li>
- <ll><a href="https://chey-s.github.io/Ballet/index4.html">1970</a></ll>
-<li><a href="https://chey-s.github.io/Ballet/index5.html">1980</a></li>
-		<ll><a href="https://chey-s.github.io/Ballet/index5.html">1980</a></ll>
+<li><a href="https://chey-s.github.io/-Ballet/index16.html">1910</a></ll>>
+  <ll><a href="https://chey-s.github.io/-Ballet/index17.html">1910</a></ll>
+ <li><a href="https://chey-s.github.io/-Ballet/index18.html">1910</a></ll>
+<ll><a href="https://chey-s.github.io/-Ballet/index19.html">1910</a></ll>
+  <li><a href="https://chey-s.github.io/-Ballet/index20.html">1910</a></ll>
+ <ll><a href="https://chey-s.github.io/-Ballet/index21.html">1910</a></ll>
+<li><a href="https://chey-s.github.io/-Ballet/index22.html">1910</a></ll>
+		<ll><a href="https://chey-s.github.io/-Ballet/index23.html">1910</a></ll>
 </ul>
 		</div></h1></center>
 	
